# Microsoft-Power-Automate-CLI

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
powerautomate_cli/: __init__.py  client.py  config.py  dataverse_client.py  main.py  output.py
powerautomate_cli/commands/: __init__.py  connection.py  connector.py  flow.py  openapi.py  solution.py  user.py
